# start-tauri

./: .gitignore  Cargo.toml  LICENSE  PREREQUISITES.md  README.md  justfile  package.json  pnpm-lock.yaml  rustfmt.toml  ui_config.toml
app/: Cargo.toml
app/src/: app.rs  lib.rs  shell.rs
app/src/common/: app_state.rs  errors.rs  mod.rs
app/src/components/: mod.rs
app/src/components/hooks/: mod.rs  use_is_current_path.rs  use_theme_mode.rs
app/src/components/layout/: app_bottom_nav.rs  app_wrapper.rs  header.rs  mod.rs  reload_button.rs  theme_toggle.rs
app/src/components/ui/: button.rs  card.rs  input.rs  mod.rs
app/src/domain/: mod.rs
app/src/domain/home/: mod.rs  page_home.rs  routes.rs
app/src/domain/settings/: mod.rs  page.rs  routes.rs
app/src/domain/test/: mod.rs  page.rs  routes.rs
app/src/routing/: not_found_page.rs
public/: manifest.json
server/: Cargo.toml
server/src/: fallback.rs  main.rs
server/src/app_router/: build_app_router.rs  mod.rs
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
style/: tailwind.css
to_remove/routing/: app_route.rs  mod.rs
