[package]
name = "start_tauri"
version = "0.1.0"
description = "Starter template for iOS apps using Rust/UI Stack."
edition = "2024"

[workspace]

[features]
default = []
tauri = []

[lib]
name = "start_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
